welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:7: error: not found: value Direction
if(isFacingWall() && (getDirection() == Direction.EAST)) {
                                        ^